- Apply part-one flex; container/child flexibility - Arrange part-one in a column w. flex-direction - Apply flex to header; child container. Arrange as row - Make .header center aligned and space-between justification - ^ To create navigation bar layout, put logo and links @ left and right - Make container for hero and img; flex, row-reverse (switch places) - Enlarge font and increase font weight on buttons - draw attention - Add padding and rounded corners (border-radius) to button class - Modify width .herosecondary; below hero, prevent stretch across page - Add top and bottom margin to .herosecondary for gap betwen button - NAV LINK FIX:  try .header a (for href); apply color and font size

--- a/styles.css
+++ b/styles.css
@@ -1,31 +1,41 @@
 body {
     display: flex;
-    flex: 1;
-    flex-wrap: wrap;
     flex-direction: column;
     font-family: Arial, Helvetica, sans-serif;
+    margin: auto;
 }
 
 .part-one {
-    background-color: #1F2937;
     display: flex;
     flex-direction: column;
-    flex-wrap: wrap;
+    background-color: #1F2937;
+    padding: 50px;
 }
 
 .header {
     display: flex;
     flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
 }
 
 header {
     padding: 10px;
+    color: #f9faf8;
 }
 
 .header ul {
     display: flex;
-    margin: 0px;
-    padding: 0px;
+}
+
+.header a {
+    color: #f9faf8;
+    font-size: 18px;
+}
+
+.heroimg {
+    display: flex;
+    flex-direction: row-reverse;
 }
 
 .heromain {
@@ -34,25 +44,30 @@ header {
     color: #f9faf8;
 }
 
+.part-one img {
+    width: 700px;
+    height: auto;
+}
+
 button {
     background-color: #3882f6;
+    color: #f9faf8;
+    font-size: 30px;
+    font-weight: bold;
+    padding: 20px 50px;
+    border-radius: 15px;
 }
-
-
-
-
-
-
-
-
-
-
-
 
 .herosecondary {
+    width: 45%;
     font-size: 18px;
     color: #e5e7eb;
+    margin: 30px 0px;
 }
+
+/*END PART ONE CONTAINER*/
+
+/*BEGIN PART TWO CONTAINER*/
 
 
 ul {
@@ -68,10 +83,5 @@ a {
 li,
 img {
     width: 150px;
-    height: auto;
-}
-
-.header-image {
-    width: 300px;
     height: auto;
 }
